A bunch of visual fixes
* Better adjusting for the top navigation bar links + watch star
** TODO: I'm still not 100% happy with the links but this'll do for now.
* Don't hard-code in avatar dimensions when using SocialProfile avatars, that won't work the way you think it does and it'll just make the avatars look blurry
** Had to ditch some IE8 compatibility code to make this work. Oh well.
** Also swapped avatar size from large (75x75 pixels) to medium (30x30 pixels)
* Show both Echo notifications and alerts in the top bar

Also includes some random coding style tweaks.

This is all tested, though only on MW 1.35 (yes, I had to make two tiny hacks, not present here, to make the code run on 1.35) and only on the "desktop" view.

(cherry picked from commit a787cabdb688492d8675ca4747abaff1fcabf0c2)

--- a/components/main/tabs.less
+++ b/components/main/tabs.less
@@ -52,6 +52,8 @@ div.vectorTabs {
 			background-position: bottom left;
 			background-repeat: repeat-x;
 			white-space: nowrap;
+			/* Force the links down a bit */
+			margin-top: 10px;
 
 			.metrolook-nav-directionality & {
 				float: left;
@@ -67,15 +69,16 @@ div.vectorTabs {
 	li {
 		&.new {
 			a,
-			a:visited{
+			a:visited {
 				color: #a55858;
 			}
 		}
 
 		&.selected {
 			.background-image('images/tab-current-fade.png');
+
 			a,
-			a:visited{
+			a:visited {
 				color: #fff;
 				text-decoration: none;
 			}
